<resources>
    <string name="app_name">Saged Aksara</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="txt_logo">Saged Aksara</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="app_desc">Sinau Aksara Jawa Bareng</string>
    <string name="kamus">Kamus</string>
    <string name="about">Tentang</string>
    <string name="about_desc">Aplikasi Puniki Dipundamel Dening:</string>
    <string name="tri">Tri Waluyo</string>
    <string name="dev">Samuel Deviko Kelvin Setiawan</string>
    <string name="wyanjana">Aksara Wyanjana</string>
    <string name="pngthn_tmbh">Pengetahuan Tambahan</string>
    <string name="prev_button">Previous Page Button</string>
    <string name="next_button">Next Page Button</string>
    <string name="test">Tes</string>
    <string name="awak_manungso">Sinau Bab Perangane Awak</string>
    <string name="krama">Basa Krama</string>
    <string name="ngoko">Basa Ngoko</string>
    <string name="build_number">SAGED AKSARA v0.5.722 \nBuild 22.alpha_release.220714–1421</string>
</resources>