<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gb_logo" />

            <TextView
                android:id="@+id/app_nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logo_img"
                app:layout_constraintStart_toStartOf="@+id/logo_img"
                app:layout_constraintTop_toBottomOf="@+id/logo_img" />

            <TextView
                android:id="@+id/aboutDesc_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/about_desc"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logo_img"
                app:layout_constraintStart_toStartOf="@+id/logo_img"
                app:layout_constraintTop_toBottomOf="@+id/app_nameTxt" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tri_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/triwaluyo"
                app:layout_constraintEnd_toEndOf="@+id/aboutDesc_txt"
                app:layout_constraintStart_toStartOf="@+id/aboutDesc_txt"
                app:layout_constraintTop_toBottomOf="@+id/aboutDesc_txt" />

            <TextView
                android:id="@+id/triName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tri"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tri_img"
                app:layout_constraintStart_toStartOf="@+id/tri_img"
                app:layout_constraintTop_toBottomOf="@+id/tri_img" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dev_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/dev"
                app:layout_constraintEnd_toEndOf="@+id/tri_img"
                app:layout_constraintStart_toStartOf="@+id/tri_img"
                app:layout_constraintTop_toBottomOf="@+id/triName" />

            <TextView
                android:id="@+id/devName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dev"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tri_img"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="@+id/tri_img"
                app:layout_constraintTop_toBottomOf="@+id/dev_img" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>