<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/parent_layout">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dashboard"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:focusable="true"
        app:cardBackgroundColor="@color/caramel"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dashboardTitle"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTitle"
        tools:layout_conversion_absoluteHeight="100dp"
        tools:layout_conversion_absoluteWidth="392dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="31dp"
                tools:layout_conversion_absoluteWidth="141dp" />

            <TextView
                android:id="@+id/app_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/app_name"
                app:layout_constraintTop_toBottomOf="@+id/app_name"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="213dp" />

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/txt_logo"
                android:src="@drawable/gb_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="50dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_kamus"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/russet"
        app:cardCornerRadius="14dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="@+id/card_header"
        app:layout_constraintStart_toStartOf="@+id/card_header"
        app:layout_constraintTop_toBottomOf="@+id/card_header"
        tools:layout_conversion_absoluteHeight="120dp"
        tools:layout_conversion_absoluteWidth="370dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/kamusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/kamus"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="56dp" />

            <ImageView
                android:id="@+id/kamusLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/txt_logo"
                android:src="@drawable/gb_kamus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_conversion_absoluteHeight="90dp"
                tools:layout_conversion_absoluteWidth="130dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_test"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/russet"
        app:cardCornerRadius="14dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="@+id/card_kamus"
        app:layout_constraintStart_toStartOf="@+id/card_kamus"
        app:layout_constraintTop_toBottomOf="@+id/card_kamus"
        tools:layout_conversion_absoluteHeight="120dp"
        tools:layout_conversion_absoluteWidth="370dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/testTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/test"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="35dp" />

            <ImageView
                android:id="@+id/testLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/txt_logo"
                android:src="@drawable/gb_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_conversion_absoluteHeight="90dp"
                tools:layout_conversion_absoluteWidth="130dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_pengetahuanumum"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/russet"
        app:cardCornerRadius="14dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="@+id/card_test"
        app:layout_constraintStart_toStartOf="@+id/card_test"
        app:layout_constraintTop_toBottomOf="@+id/card_test"
        tools:layout_conversion_absoluteHeight="120dp"
        tools:layout_conversion_absoluteWidth="370dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pngthn_tmbhTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pngthn_tmbh"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="61dp" />

            <ImageView
                android:id="@+id/pngthn_tmbhLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/txt_logo"
                android:src="@drawable/gb_pengetahuan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_conversion_absoluteHeight="90dp"
                tools:layout_conversion_absoluteWidth="130dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/build_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/build_number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>